[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Enemy_Abilities/circular_aoe.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemy_Abilities/circular_aoe_indicator.png" type="Texture" id=2]
[ext_resource path="res://Enemy_Elements/Boss_Abilities/BossAttack2.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Warning",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Active",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="BossAttack2" type="Area2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Warning"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="WarningTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_BossAttack2_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_BossAttack2_body_entered"]
[connection signal="timeout" from="WarningTimer" to="." method="_on_WarningTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
